align nav with pagination fixes; still need to figure out nav item hover outline

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -26,6 +26,38 @@
       // line-height: 56px;
     }
 
+    .site-nav {
+        float: right;
+        line-height: 56px;
+        position: fixed;
+        right:5vw;
+        top: 2vh;
+
+        .menu-icon, .icon-list {
+            display: none;
+        }
+
+        .page-link {
+            color: $text-color;
+            line-height: $base-line-height;
+            // float: right;
+            // margin-right: 20px;
+
+            // Gaps between nav items, but not on the last one
+            &:not(:last-child) {
+                margin-right: 20px;
+            }
+        }
+    }
+    @media (min-width: $on-big-laptop){
+      .site-title {
+        padding-left: 0;
+      }
+      .site-nav a{
+        padding-right: 0;
+      }
+    }
+
     @media (max-width: $on-big-laptop) {
       background: #fff;
       height: 40px;
@@ -43,14 +75,14 @@
         //line-height: 1em;
 
       }
-
-
+    }
     @media (max-width: $on-laptop) {
       .site-title {
         left: 0;
       }
-      .site-nav {
+      .site-nav a{
         right: 0;
+        padding-right: 0;
       }
     }
     @media (max-width: $on-palm) {
@@ -58,9 +90,6 @@
           display: none;
         }
       }
-
-
-    }
 }
 
 
@@ -91,78 +120,7 @@
 
 }
 
-.site-nav {
-    float: right;
-    line-height: 56px;
-    position: fixed;
-    right:5vw;
-    top: 2vh;
 
-    .menu-icon, .icon-list {
-        display: none;
-    }
-
-    .page-link {
-        color: $text-color;
-        line-height: $base-line-height;
-        // float: right;
-        // margin-right: 20px;
-
-        // Gaps between nav items, but not on the last one
-        &:not(:last-child) {
-            margin-right: 20px;
-        }
-    }
-
-    // @include media-query($on-palm) {
-    //     position: absolute;
-    //     top: 9px;
-    //     right: $spacing-unit / 2;
-    //     background-color: $background-color;
-    //     border: 1px solid $grey-color-light;
-    //     border-radius: 5px;
-    //     text-align: right;
-    //
-    //     .menu-icon {
-    //         display: block;
-    //         float: right;
-    //         width: 36px;
-    //         height: 26px;
-    //         line-height: 0;
-    //         padding-top: 10px;
-    //         text-align: center;
-    //
-    //         > svg {
-    //             width: 18px;
-    //             height: 15px;
-    //
-    //             path {
-    //                 fill: $grey-color-dark;
-    //             }
-    //         }
-    //     }
-    //
-    //     .trigger {
-    //         clear: both;
-    //         display: none;
-    //     }
-    //
-    //     &:hover .trigger {
-    //         display: block;
-    //         padding-bottom: 5px;
-    //     }
-    //
-    //     .page-link {
-    //         display: block;
-    //         padding: 5px 10px;
-    //
-    //         &:not(:last-child) {
-    //             margin-right: 0;
-    //         }
-    //         margin-left: 20px;
-    //     }
-    // }
-}
 
 a {
   .appear-on-hover {
